assets/css/styles.css
@font-face {
    font-family: utm-edwardian;
    src: url(../fonts/utm_edwardian_kt.TTF);
}

@font-face {
    font-family: utm-edwardian;
    font-weight: bold;
    src: url(../fonts/utm_edwardian_b.TTF);
}

@font-face {
    font-family: voll-korn;
    src: url(../fonts/Vollkorn-Regular.ttf);
}

@font-face {
    font-family: voll-korn;
    font-weight: bold;
    src: url(../fonts/Vollkorn-Bold.ttf);
}

body {
    margin: 0;
    background: #E6E8DF;
}

.video-container {
    position: relative;
    text-align: center;
    width: 100%;
    height: 100%;
    background-image: url(../images/background_5.jpg);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-position: bottom;
}

.video-container-inner {
    width: 100%;
    height: 100%;
    top: 0%;
    position: absolute;
    perspective: 1000px;
    margin: 0 auto;
    background: rgba(230, 232, 223, 0.75);
}

.frame {
    /*background-image: url(../images/frame_4.png);*/
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;

    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1;
    pointer-events: none;
}

.video-container-flip-item {
    position: relative;
    height: 100%;
    width: 100%;
    transform-style: preserve-3d;
    transition: transform 2s;
}

.video-container-flip-item.flipped {
    transform: rotateY(180deg);
}

.video-container video {
    object-fit: cover;
    max-width: 100%;
    max-height: 100%;
    box-sizing: border-box;
    position: relative;
}

#guest {
    color: darkred;
}

.info {
    width: 100%;
    height: 100%;
    top: 0;
    position: absolute;
    box-sizing: border-box;
    transform: rotateY(180deg) translateZ(1px);
    font-family: voll-korn;
    font-size: 20px;
    padding: 50px;
    color: rgb(104,110,94);
    display: flex;
    align-items: center;
    line-height: 2.5;
    backface-visibility: hidden;
}

.info .names {
    font-family: utm-edwardian;
    font-weight: bold;
    font-size: 30px;
    line-height: normal;
    color: darkred;
}

.info .action-items {
    font-size: 15px;
}

.button {
    margin: 0 25px;
    background-size: contain;
    background-repeat: no-repeat;
    padding: 0 0 0 20px;
}

.button a {
    text-decoration: none;
    color: darkred;
}

.play {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 150px;
    transform: translate(-50%, -50%) scale(100%);
    z-index: 1;
}

.play:hover {
    cursor: pointer;
}

.play.clicked {
    animation: button-clicked 1s ease-in-out forwards;
}

.video-container-box {
    position: relative;
    display: inline-block;
    max-height: 100%;
    backface-visibility: hidden;
}

@keyframes button-clicked {
    0% {
        opacity: 1;
        transform: translate(-50%, -50%) scale(100%);
    }

    33% {
        opacity: 0.66;
        transform: translate(-50%, -50%) scale(80%);
    }
  
    66% {
        opacity: 0.33;
        transform: translate(-50%, -50%) scale(120%);
    }

    100% {
        opacity: 0;
        transform: translate(-50%, -50%) scale(100%);
        display: none;
        visibility: hidden;
    }
}

@media (orientation:portrait) {

    .info {
        transform: none;
        font-size: 40px;
        height: auto;
        top: auto;
    }

    @media (min-height: 1500px) {
        .info {
            padding: 100px 50px;
        }
    }

    @media (min-height: 2000px) {
        .info {
            padding: 300px 50px;
        }
    }

    .info .names {
        font-size: 60px;
        line-height: 2.5;
    }

    .button {
        padding: 0 0 0 55px;
    }

    .info .action-items {
        font-size: 40px;
    }

    .video-container {
        background-image: url(../images/background_5-portrait.jpg);
        background-size: 100% auto;
    }
    
    .video-container-flip-item.flipped {
        transform: none;
    }

    p {
        margin-block: 0;
    }

    .frame {
        background-image: none;
    }
}
 

